# TideWatch-MCP-Server

./: .gitignore  CLAUDE.md  config.env  pyproject.toml  setup.sh
config/: mcp_remote.example.json  nginx_tidewatch.polly.wang.conf
docs/: hackathon-registration.md
scripts/: check_signals.py  setup_domain.sh  tidewatch.service
src/tidewatch/: data.py  guardrails.py  llm.py  server.py  tracker.py
